# cg-project

ShadowGame/: CMakeLists.txt
ShadowGame/src/: LightSource.hpp  background.cpp  background.hpp  camera.cpp  camera.hpp  collision_detect.cpp  main.cpp  object.cpp  object.hpp  people.cpp  people.hpp  scene.cpp  scene.hpp  shadow.cpp  shadow.hpp
ShadowGame/src/shaders/: object_shader.frag  object_shader.vert
